--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,53 +1,32 @@
-<!doctype html>
-<html class="no-js" lang="">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>AKKHOR | Login</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-    <!-- Normalize CSS -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <!-- Main CSS -->
-    <link rel="stylesheet" href="css/main.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- Fontawesome CSS -->
-    <link rel="stylesheet" href="css/all.min.css">
-    <!-- Flaticon CSS -->
-    <link rel="stylesheet" href="fonts/flaticon.css">
-    <!-- Animate CSS -->
-    <link rel="stylesheet" href="css/animate.min.css">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="../static/style.css">
-    <!-- Modernize js -->
-    <script src="js/modernizr-3.6.0.min.js"></script>
-</head>
-
-<body>
-    <!-- Preloader Start Here -->
-    <div id="preloader"></div>
-    <!-- Preloader End Here -->
+{% extends 'base/base.html' %}
+{% load static %}
+{% block content %}
     <!-- Login Page Start Here -->
     <div class="login-page-wrap">
         <div class="login-page-content">
             <div class="login-box">
                 <div class="item-logo">
-                    <img src="img/logo2.png" alt="logo">
+                    <img src="{% static 'img/logo2.png' %}" alt="logo">
                 </div>
-                <form action="index.html" class="login-form">
+                <form class="login-form" method="POST">
+                    {% csrf_token %}
+                    <div style="width: 200px;">
+                        {% for message in messages %}
+                            {{ message }}
+                        {% endfor %}
+                        {{ form.non_field_errors }}
+                    </div>
                     <div class="form-group">
                         <label>Username</label>
-                        <input type="text" placeholder="Enter usrename" class="form-control">
+                        <input type="text" name="username" placeholder="Enter username" class="form-control">
                         <i class="far fa-envelope"></i>
+                        <span style="color: red">{{ form.username.errors }}</span>
                     </div>
                     <div class="form-group">
                         <label>Password</label>
-                        <input type="text" placeholder="Enter password" class="form-control">
+                        <input type="text" name="password" placeholder="Enter password" class="form-control">
                         <i class="fas fa-lock"></i>
+                        <span style="color: red">{{ form.password.errors }}</span>
                     </div>
                     <div class="form-group d-flex align-items-center justify-content-between">
                         <div class="form-check">
@@ -74,19 +53,5 @@
         </div>
     </div>
     <!-- Login Page End Here -->
-    <!-- jquery-->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <!-- Plugins js -->
-    <script src="js/plugins.js"></script>
-    <!-- Popper js -->
-    <script src="js/popper.min.js"></script>
-    <!-- Bootstrap js -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- Scroll Up Js -->
-    <script src="js/jquery.scrollUp.min.js"></script>
-    <!-- Custom Js -->
-    <script src="js/main.js"></script>
 
-</body>
-
-</html>
+{% endblock content %}
