--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -261,17 +261,17 @@
                         <a href="#" class="nav-link"><i class="flaticon-dashboard"></i><span>Dashboard</span></a>
                         <ul class="nav sub-group-menu">
                             <li class="nav-item">
-                                <a href="index.html" class="nav-link"><i class="fas fa-angle-right"></i>Admin</a>
+                                <a href="{% url 'admin_dashboard_page' %}" class="nav-link"><i class="fas fa-angle-right"></i>Admin</a>
                             </li>
                             <li class="nav-item">
-                                <a href="index3.html" class="nav-link"><i
+                                <a href="{% url 'student_dashboard_page' %}" class="nav-link"><i
                                         class="fas fa-angle-right"></i>Students</a>
                             </li>
                             <li class="nav-item">
-                                <a href="index4.html" class="nav-link"><i class="fas fa-angle-right"></i>Parents</a>
+                                <a href="{% url 'parent_dashboard_page' %}" class="nav-link"><i class="fas fa-angle-right"></i>Parents</a>
                             </li>
                             <li class="nav-item">
-                                <a href="index5.html" class="nav-link"><i
+                                <a href="{% url 'teacher_dashboard_page' %}" class="nav-link"><i
                                         class="fas fa-angle-right"></i>Teachers</a>
                             </li>
                         </ul>
@@ -419,11 +419,6 @@
 
         {% endblock content %}
         <!-- Footer Area Start Here -->
-        <footer class="footer-wrap-layout1">
-            <div class="copyright">© Copyrights <a href="#">akkhor</a> 2019. All rights reserved. Designed by <a
-                    href="#">PsdBosS</a></div>
-        </footer>
-        <!-- Footer Area End Here -->
     </div>
     <!-- Page Area End Here -->
 </div>
