--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -283,7 +283,10 @@
                                 <a href="{% url 'student_page' %}" class="nav-link"><i class="fas fa-angle-right"></i>All
                                     Students</a>
                             </li>
-
+                            <li class="nav-item">
+                                <a href="{% url 'student_detail_page' pk=46 %}" class="nav-link"><i
+                                        class="fas fa-angle-right"></i>Student Details</a>
+                            </li>
                             <li class="nav-item">
                                 <a href="{% url 'add_student_page' %}" class="nav-link"><i
                                         class="fas fa-angle-right"></i>Admission Form</a>
