--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -261,7 +261,7 @@
                         <a href="#" class="nav-link"><i class="flaticon-dashboard"></i><span>Dashboard</span></a>
                         <ul class="nav sub-group-menu">
                             <li class="nav-item">
-                                <a href="{% url 'admin_dashboard_page' %}" class="nav-link"><i class="fas fa-angle-right"></i>Admin</a>
+                                <a href="{% url 'home' %}" class="nav-link"><i class="fas fa-angle-right"></i>Admin</a>
                             </li>
                             <li class="nav-item">
                                 <a href="{% url 'student_dashboard_page' %}" class="nav-link"><i
