--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends 'base/base.html' %}
+{% extends 'base/base_login_register.html' %}
 {% load static %}
 {% block content %}
     <!-- Login Page Start Here -->
