--- a/templates/teachers/teacher-details.html
+++ b/templates/teachers/teacher-details.html
@@ -34,7 +34,7 @@
                         </div>
                         <div class="single-info-details">
                             <div class="item-img">
-                                <img src="img/figure/teacher.jpg" alt="teacher">
+                                <img src="{% static 'img/figure/teacher.jpg' %}" alt="teacher">
                             </div>
                             <div class="item-content">
                                 <div class="header-inline item-header">
