--- a/templates/teachers/teacher-details.html
+++ b/templates/teachers/teacher-details.html
@@ -38,7 +38,7 @@
                             </div>
                             <div class="item-content">
                                 <div class="header-inline item-header">
-                                    <h3 class="text-dark-medium font-medium">Steven Johnson</h3>
+                                    <h3 class="text-dark-medium font-medium">{{ teachers.first_name }}</h3>
                                     <div class="header-elements">
                                         <ul>
                                             <li><a href="#"><i class="far fa-edit"></i></a></li>
@@ -47,63 +47,45 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <p>Aliquam erat volutpat. Curabiene natis massa sedde lacu stiquen sodale 
-                                word moun taiery.Aliquam erat volutpaturabiene natis massa sedde  sodale 
-                                word moun taiery.</p>
+                                <p>{{ teacher.description }}</p>
                                 <div class="info-table table-responsive">
                                     <table class="table text-nowrap">
                                         <tbody>
                                             <tr>
                                                 <td>Name:</td>
-                                                <td class="font-medium text-dark-medium">Steven Johnson</td>
+                                                <td class="font-medium text-dark-medium">{{ teacher.get_full_name }}</td>
                                             </tr>
                                             <tr>
                                                 <td>Gender:</td>
-                                                <td class="font-medium text-dark-medium">Male</td>
+                                                <td class="font-medium text-dark-medium">{{ teacher.get_gender_display }}</td>
                                             </tr>
                                             <tr>
                                                 <td>Father Name:</td>
-                                                <td class="font-medium text-dark-medium">Steve Jones</td>
+                                                <td class="font-medium text-dark-medium">{{ teacher.father_name }}</td>
                                             </tr>
                                             <tr>
                                                 <td>Mother Name:</td>
-                                                <td class="font-medium text-dark-medium">Naomi Rose</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Religion:</td>
-                                                <td class="font-medium text-dark-medium">Islam</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Joining Date:</td>
-                                                <td class="font-medium text-dark-medium">07.08.2016</td>
+                                                <td class="font-medium text-dark-medium">{{ teacher.mother_name }}</td>
                                             </tr>
                                             <tr>
                                                 <td>E-mail:</td>
-                                                <td class="font-medium text-dark-medium">stevenjohnson@gmail.com</td>
+                                                <td class="font-medium text-dark-medium">{{ teacher.email }}</td>
                                             </tr>
                                             <tr>
                                                 <td>Subject:</td>
-                                                <td class="font-medium text-dark-medium">English</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Class:</td>
-                                                <td class="font-medium text-dark-medium">2</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Section:</td>
-                                                <td class="font-medium text-dark-medium">Pink</td>
+                                                <td class="font-medium text-dark-medium">{{ teacher.subject }}</td>
                                             </tr>
                                             <tr>
                                                 <td>ID No:</td>
-                                                <td class="font-medium text-dark-medium">10005</td>
+                                                <td class="font-medium text-dark-medium">{{ teacher.id }}</td>
                                             </tr>
                                             <tr>
                                                 <td>Address:</td>
-                                                <td class="font-medium text-dark-medium">House #10, Road #6, Australia</td>
+                                                <td class="font-medium text-dark-medium">{{ teacher.address }}</td>
                                             </tr>
                                             <tr>
                                                 <td>Phone:</td>
-                                                <td class="font-medium text-dark-medium">+ 88 98568888418</td>
+                                                <td class="font-medium text-dark-medium">{{ teacher.phone_number }}</td>
                                             </tr>
                                         </tbody>
                                     </table>
