--- a/templates/all-lessons.html
+++ b/templates/all-lessons.html
@@ -5,12 +5,12 @@
             <div class="dashboard-content-one">
                 <!-- Breadcubs Area Start Here -->
                 <div class="breadcrumbs-area">
-                    <h3>All Subjects</h3>
+                    <h3>All Lessons</h3>
                     <ul>
                         <li>
                             <a href="index.html">Home</a>
                         </li>
-                        <li>Subjects</li>
+                        <li>Lessons</li>
                     </ul>
                 </div>
                 <!-- Breadcubs Area End Here -->
@@ -21,33 +21,31 @@
                             <div class="card-body">
                                 <div class="heading-layout1">
                                     <div class="item-title">
-                                        <h3>Add New Subject</h3>
+                                        <h3>Add New Lesson</h3>
                                     </div>
                                 </div>
                                 <form class="new-added-form">
                                     <div class="row">
                                         <div class="col-12-xxxl col-lg-6 col-12 form-group">
-                                            <label>Subject Name *</label>
+                                            <label>Lesson Name *</label>
                                             <input type="text" placeholder="" class="form-control">
                                         </div>
                                         <div class="col-12-xxxl col-lg-6 col-12 form-group">
-                                            <label>Subject Type *</label>
+                                            <label>Lesson Title *</label>
                                             <select class="select2">
                                                 <option value="">Please Select</option>
-                                                {% for subject in subjects %}
-                                                <option value="1">{{ subject }}</option>
+                                                {% for lesson in lessons %}
+                                                <option value="1">{{ lesson.title }}</option>
                                                 {% endfor %}
-                                                </select>
+                                            </select>
                                         </div>
                                         <div class="col-12-xxxl col-lg-6 col-12 form-group">
-                                            <label>Select Class *</label>
+                                            <label>Ordering Number *</label>
                                             <select class="select2">
                                                 <option value="0">Please Select</option>
-                                                <option value="1">Play</option>
-                                                <option value="2">Nursery</option>
-                                                <option value="3">One</option>
-                                                <option value="3">Two</option>
-                                                <option value="3">Three</option>
+                                                {% for lesson in lessons %}
+                                                <option value="1">{{ lesson.ordering_number }}</option>
+                                                {% endfor %}
                                             </select>
                                         </div>
                                         <div class="col-12-xxxl col-lg-6 col-12 form-group">
@@ -75,18 +73,18 @@
                             <div class="card-body">
                                 <div class="heading-layout1">
                                     <div class="item-title">
-                                        <h3>All Subjects</h3>
+                                        <h3>All Lessons</h3>
                                     </div>
+
                                 </div>
                                 <form class="mg-b-20">
                                     <div class="row gutters-8">
-                                         <div class="col-lg-3 col-12 form-group">
-                                            <input type="text" name="q" placeholder="Search by ID ..." class="form-control">
+                                        <div class="col-lg-3 col-12 form-group">
+                                            <input type="text" name="q" placeholder="Search by Lesson Name ..." class="form-control">
                                         </div>
                                         <div class="col-lg-3 col-12 form-group">
-                                            <input type="text" name="q" placeholder="Search by Subject Name ..." class="form-control">
+                                            <input type="text" name="q" placeholder="ordering number ..." class="form-control">
                                         </div>
-
                                         <div class="col-lg-2 col-12 form-group">
                                             <button type="submit"
                                                 class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
@@ -103,26 +101,26 @@
                                                         <label class="form-check-label">ID</label>
                                                     </div>
                                                 </th>
-                                                <th>Subject Name</th>
-                                                <th>Subject Type</th>
-<!--                                                <th>Class</th>-->
+                                                <th>Lesson Name</th>
+                                                <th>Lesson Title</th>
+                                                <th>Ordering Number</th>
                                                 <th>Date</th>
                                                 <th></th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                        {% for subject in subjects %}
+                                        {% for lesson in lessons %}
                                             <tr>
                                                 <td>
                                                     <div class="form-check">
                                                         <input type="checkbox" class="form-check-input">
-                                                        <label class="form-check-label">#{{ subject.id }}</label>
+                                                        <label class="form-check-label">#{{ lesson.id }}</label>
                                                     </div>
                                                 </td>
-                                                <td>{{ subject.name }}</td>
-                                                <td>Mathematics</td>
-<!--                                                <td>4</td>-->
-                                                <td>{{ subject.created_at.date }}</td>
+                                                <td>{{ lesson.subject }}</td>
+                                                <td>{{ lesson.title }}</td>
+                                                <td>{{ lesson.ordering_number }}</td>
+                                                <td>{{ lesson.subject.created_at.date }}</td>
                                                 <td>
                                                     <div class="dropdown">
                                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"
@@ -131,7 +129,7 @@
                                                         </a>
                                                         <div class="dropdown-menu dropdown-menu-right">
                                                             <a class="dropdown-item" href="#"><i
-                                                                    class="fas fa-times text-orange-red"></i>Close</a>
+                                                                    class="fas fa-times text-orange-red"></i>Delete</a>
                                                             <a class="dropdown-item" href="#"><i
                                                                     class="fas fa-cogs text-dark-pastel-green"></i>Edit</a>
                                                             <a class="dropdown-item" href="#"><i
@@ -148,7 +146,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- All Subjects Area End Here -->
+                <!-- All Lessons Area End Here -->
                 <footer class="footer-wrap-layout1">
                     <div class="copyright">© Copyrights <a href="#">akkhor</a> 2019. All rights reserved. Designed by <a
                             href="#">PsdBosS</a></div>
