--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -325,6 +325,12 @@
                             </li>
                         </ul>
                     </li>
+
+                    <li class="nav-item">
+                        <a href="{% url 'lesson_page' %}" class="nav-link"><i
+                                class="flaticon-open-book"></i><span>Lesson</span></a>
+                    </li>
+
                     <li class="nav-item sidebar-nav-item">
                         <a href="#" class="nav-link"><i class="flaticon-books"></i><span>Library</span></a>
                         <ul class="nav sub-group-menu">
