--- a/templates/all-lessons.html
+++ b/templates/all-lessons.html
@@ -80,10 +80,10 @@
                                 <form class="mg-b-20">
                                     <div class="row gutters-8">
                                         <div class="col-lg-3 col-12 form-group">
-                                            <input type="text" name="q" placeholder="Search by Lesson Name ..." class="form-control">
+                                            <input type="text" name="search_name" placeholder="Search by Lesson Name ..." class="form-control">
                                         </div>
                                         <div class="col-lg-3 col-12 form-group">
-                                            <input type="text" name="q" placeholder="ordering number ..." class="form-control">
+                                            <input type="text" name="search_ordering_number" placeholder="ordering number ..." class="form-control">
                                         </div>
                                         <div class="col-lg-2 col-12 form-group">
                                             <button type="submit"
