--- a/templates/all-subject.html
+++ b/templates/all-subject.html
@@ -81,10 +81,10 @@
                                 <form class="mg-b-20">
                                     <div class="row gutters-8">
                                          <div class="col-lg-3 col-12 form-group">
-                                            <input type="text" name="q" placeholder="Search by ID ..." class="form-control">
+                                            <input type="text" name="search_id" placeholder="Search by ID ..." class="form-control">
                                         </div>
                                         <div class="col-lg-3 col-12 form-group">
-                                            <input type="text" name="q" placeholder="Search by Subject Name ..." class="form-control">
+                                            <input type="text" name="search_name" placeholder="Search by Subject Name ..." class="form-control">
                                         </div>
 
                                         <div class="col-lg-2 col-12 form-group">
@@ -104,7 +104,6 @@
                                                     </div>
                                                 </th>
                                                 <th>Subject Name</th>
-                                                <th>Subject Type</th>
 <!--                                                <th>Class</th>-->
                                                 <th>Date</th>
                                                 <th></th>
@@ -120,7 +119,6 @@
                                                     </div>
                                                 </td>
                                                 <td>{{ subject.name }}</td>
-                                                <td>Mathematics</td>
 <!--                                                <td>4</td>-->
                                                 <td>{{ subject.created_at.date }}</td>
                                                 <td>
